@@ -1,6 +1,6 @@
 /**
  * @fileOverview php_bs_grid is a jQuery helper plugin for php_bs_grid class. Project page https://github.com/pontikis/php_bs_grid
- * @version 0.9.3 (15/05/2017)
+ * @version 0.9.4 (??/05/2017)
  * @licence MIT
  * @author Christos Pontikis http://www.pontikis.net
  * @copyright Christos Pontikis http://www.pontikis.net
@@ -319,7 +319,11 @@
                         datepicker_params.onSelect = function() {
                             disableExport();
                         };
-                        elem_criteria.datepicker(datepicker_params);
+                        if(value.hasOwnProperty("show_time") && value.show_time === true) {
+                            elem_criteria.datetimepicker(datepicker_params);
+                        } else {
+                            elem_criteria.datepicker(datepicker_params);
+                        }
 
                         elem_criteria_operator.change(function() {
                             arrange_criteria("date_start");
@@ -346,7 +350,11 @@
                         datepicker_params.onSelect = function() {
                             disableExport();
                         };
-                        elem_criteria.datepicker(datepicker_params);
+                        if(value.hasOwnProperty("show_time") && value.show_time === true) {
+                            elem_criteria.datetimepicker(datepicker_params);
+                        } else {
+                            elem_criteria.datepicker(datepicker_params);
+                        }
 
                         elem_criteria_operator.change(function() {
                             arrange_criteria("date_end");
